MID: 579 MSG: Afegir funcionalitat a la classe DominiIntern
MID: 580
MSG: Fer la cerca per número del llistat d'expedients igual que la del llistat de tasques

MID: 581
MSG: Modificació accés al llistat de tasques

MID: 582
MSG: Error al eliminar documents des de la pestanya de documents de l'expedient

MID: 583
MSG: Error al enviar a portasignatures per descripció massa llarga

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@970 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -787,6 +787,8 @@ common.tabstasca.massiva.canvi=Modificar la selecció de tasques
 
 common.tabstasques.personals=Personals
 common.tabstasques.grup=Grup
+common.tasques.personals=Tasques personals
+common.tasques.grup=Tasques de grup
 
 common.tascaro.dadesref=Dades de referència
 
