MID: 494 MSG: Reassignar tasques massivament
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@983 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -25,6 +25,9 @@ expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
 expedient.consulta.informe=Mostrar informe
+expedient.consulta.mostrar.tasques.grup=Mostrar tasques de grup
+expedient.consulta.responsable.tasca=Responsable de la tasca
+expedient.consulta.tasques=Llistat de tasques
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
@@ -841,6 +844,7 @@ decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
 decorators.entorn.consultes.llistat=Llistat d'expedients
 decorators.entorn.consultes.tipus=Consultes per tipus
+decorators.entorn.consultes.tasques=Llistat de tasques
 decorators.entorn.nou_exp=Nou expedient
 decorators.entorn.tipus_area=Tipus d'àrea
 decorators.entorn.despl_arxiu=Desplegar arxiu
@@ -1351,6 +1355,7 @@ tasca.pllistat.alliberar=Alliberar
 
 tasca.massiva.tramitacio=Tramitació massiva de tasques
 tasca.massiva.tramitar=Tramitar
+tasca.massiva.reassignar.buit=No s'ha trobat la tasca a reassignar
 
 tasca.reg.guardar=Guardar
 
