mid: 0000585 msg: Restringir accions per ROL
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@987 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -204,6 +204,7 @@ error.especificar.data=s''ha d''especificar la data
 error.extensio.document=L'extensió d''aquest document no està permesa
 
 error.executar.accio=No s''ha pogut executar l''acció
+error.accio.no.permesa=No té permisos per executar aquesta acció
 error.executar.retroces=No s''ha pogut executar el retrocés
 error.validar.formulari=No s''ha pogut validar el formulari
 error.restaurar.formulari=No s''ha pogut restaurar el formulari
