--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -868,6 +868,7 @@ defproc.accform.handler=Handler
 defproc.accform.publica=Execució pública
 defproc.accform.oculta=Ocultar acció
 defproc.accform.cron=Expressió cron per execució "batch"
+defproc.accform.rols=Restringir als rols
 
 defproc.accllistat.confirmacio=Estau segur que voleu esborrar aquesta acció?
 defproc.accllistat.handler=Handler
