MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1001 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -25,6 +25,9 @@ expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
 expedient.consulta.informe=Mostrar informe
+expedient.consulta.mostrar.tasques.grup=Mostrar tasques de grup
+expedient.consulta.responsable.tasca=Responsable de la tasca
+expedient.consulta.tasques=Llistat de tasques
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
@@ -639,6 +642,7 @@ comuns.progres=Progrés
 comuns.refrescar=Refrescar
 comuns.mes.dades=Més dades
 comuns.objectsPerPage=Resultats per pàgina
+comuns.mesures=Mesures
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
@@ -787,6 +791,8 @@ common.tabstasca.massiva.canvi=Modificar la selecció de tasques
 
 common.tabstasques.personals=Personals
 common.tabstasques.grup=Grup
+common.tasques.personals=Tasques personals
+common.tasques.grup=Tasques de grup
 
 common.tascaro.dadesref=Dades de referència
 
@@ -839,6 +845,7 @@ decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
 decorators.entorn.consultes.llistat=Llistat d'expedients
 decorators.entorn.consultes.tipus=Consultes per tipus
+decorators.entorn.consultes.tasques=Llistat de tasques
 decorators.entorn.nou_exp=Nou expedient
 decorators.entorn.tipus_area=Tipus d'àrea
 decorators.entorn.despl_arxiu=Desplegar arxiu
@@ -1350,6 +1357,7 @@ tasca.pllistat.alliberar=Alliberar
 
 tasca.massiva.tramitacio=Tramitació massiva de tasques
 tasca.massiva.tramitar=Tramitar
+tasca.massiva.reassignar.buit=No s'ha trobat la tasca a reassignar
 
 tasca.reg.guardar=Guardar
 
@@ -1374,6 +1382,8 @@ tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
 tasca.signa.massiu.no_es_podran=No es poden signar documents massivament
+
+tasca.pendents.completar=Tasques pendents de completar
 
 error.error=Error
 error.sa_produit=S'ha produït un error a l'aplicació
