MID: 528. MSG: Merge de la branca 2.6 MID: 629. MSG: Error al canviar d'estat en el node enter del primer node MID: 628. MSG: Visualitzar informació dominis WS MID: 627. MSG: Revisar validació de formulari amb VALANG MID: 626. MSG: Jasper reports consultes per tipus MID: 625. MSG: Guardar informació dominis WS MID: 624. MSG: Desplegar tasques actives dels expedients MID: 623. MSG: La tasca ha de tenir un link per a la seva tramitació ordinària MID: 619. MSG: Les tasques finalitzen però apareix un missatge d'error
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1059 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -643,6 +643,11 @@ comuns.refrescar=Refrescar
 comuns.mes.dades=Més dades
 comuns.objectsPerPage=Resultats per pàgina
 comuns.mesures=Mesures
+comuns.tots.tipus=Tots els tipus
+comuns.expedients=Expedients
+comuns.informes=Informes
+comuns.activitat=Activitat
+comuns.arxiu=Arxiu
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
