mid: 640 msg: Generació de reports amb paràmetres
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1076 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -35,6 +35,7 @@ expedient.consulta.error.integracions=Aquest expedient conté errors provinents d
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aquest expedient?
+expedient.consulta.anulacio.motiu=Introdueixi el motiu de l'anul·lació
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
@@ -45,6 +46,7 @@ expedient.consulta.anulats.actius=Actius
 expedient.consulta.anulats.anulats=Anul·lats
 expedient.consulta.anulats.tots=Actius i anul·lats
 expedient.consulta.anulats.mostrar=Mostrar expedients
+expedient.consulta.params.modal.titol=Paràmetres de l'informe
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
@@ -376,6 +378,8 @@ etiqueta.exp.tipus=Tipus d'expedient
 etiqueta.exp.estat=Estat de l'expedient
 info.camp.consulta.afegit=S'ha afegit el camp a la consulta
 info.camp.consulta.esborrat=El camp de la consulta s'ha esborrat correctament
+info.param.consulta.afegit=S'ha afegit el paràmetre a la consulta
+info.param.consulta.esborrat=El paràmetre de la consulta s'ha esborrat correctament
 
 info.consulta.guardat=La consulta s'ha guardat correctament
 info.consulta.esborrat=La consulta s'ha esborrat correctament
@@ -823,7 +827,9 @@ consulta.form.desactivar=Desactivar?
 consulta.form.formatExportacio=Format d'exportació
 consulta.form.formatExportacio.seleccio=Seleccionau un format
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
-consulta.llistat.vars_filtre=Variables del filtre
+consulta.llistat.vars_filtre=Vars. filtre
+consulta.llistat.vars_informe=Vars. informe
+consulta.llistat.params_informe=Params.
 consulta.llistat.nova=Nova consulta
 
 consulta.subconsulta.camp.subconsultes=Subconsultes
@@ -833,6 +839,13 @@ consulta.subconsulta.camp.subconsulta.seleccioni=Seleccioni una consulta
 consulta.subconsulta.camp.subconsulta.buit=Sense consultes disponibles
 consulta.subconsulta.afegit=S'ha afegit la subconsulta a la consulta
 consulta.subconsulta.esborrat=S'ha esborrat la subconsulta de la consulta
+
+consulta.params.titol=Paràmetres de l'informe
+consulta.params.confirmacio=Està segur que vol esborrar aquest paràmetre?
+consulta.params.afegir=Nou paràmetre
+consulta.params.camp.codi=Codi
+consulta.params.camp.descripcio=Descripció
+consulta.params.camp.tipus=Tipus
 
 decorators.default.benvinguts=Benvinguts
 decorators.default.autenticat_amb=Autenticat actualment amb l'usuari
