--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -24,6 +24,7 @@ error.mapeigSistra.canviVersio=s''ha produït un error realizant el procés de can
 error.expedient.titolrepetit=Ja existeix un expedient d''aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d''aquest tipus amb el mateix número
 error.expedient.relacio.esborrar=Error al esborrar la relació de l'expedient
+error.expedient.relacionar=Error al relacionar el expediente
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
