MID: 638. MSG: Ejecutar acciones masivas para todos los expedientes sin seleccionarlos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1091 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -39,6 +39,8 @@ expedient.consulta.anulacio.motiu=Introdueixi el motiu de l'anul·lació
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
+expedient.consulta.massiva.accions.sel=Seleccionats
+expedient.consulta.massiva.accions.tots=Tots
 expedient.consulta.massiva.seleccio.activar=Activar selecció
 expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
 expedient.consulta.anulats=Mostrar anul·lats
