MID: 638. MSG: Ejecutar acciones masivas para todos los expedientes sin seleccionarlos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1097 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -287,6 +287,7 @@ error.no.tiexep.selec=No hi ha cap tipus d''expedient seleccionat
 error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
 error.no.tasc.selec=No ha seleccionat cap tasca
+error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
 error.reindexar.expedient=Error al reindexar expedient
 
