--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -41,6 +41,7 @@ expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
 expedient.consulta.massiva.accions.sel=Seleccionats
 expedient.consulta.massiva.accions.tots=Tots
+expedient.consulta.massiva.accions.totsTipus=Executar accions massives sobre el tipus d'expedient
 expedient.consulta.massiva.seleccio.activar=Activar selecció
 expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
 expedient.consulta.anulats=Mostrar anul·lats
@@ -129,12 +130,11 @@ expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
-expedient.eines.reassignar.expedients=Reassignar tasques
+expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.eines.modificar_variables=Variables
-expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.reassignar.tipus=Tipus d''expressió
 expedient.eines.reassignar_tasques=Tasca
 expedient.info.informacio=Informació de l'expedient
@@ -1391,7 +1391,6 @@ tasca.signa.son_sign_oblig=són de signatura obligatòria
 tasca.signa.camp.cert=Certificat per a signar
 tasca.signa.camp.passwd=Contrasenya del certificat
 tasca.signa.obtenint.certs=Obtenint certificats disponibles...
-tasca.signa.signar=Signar
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
