MID: 641. MSG: Inestabilitat en el control dels camps obligatoris
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1098 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -199,6 +199,7 @@ error.validacio.tasca=Error de validació en la tasca
 error.especificar.dest.delegacio=No ha especificat cap destinatari per a la delegació
 
 error.tasca.no.disponible=Aquesta tasca ja no està disponible
+error.tasca.validada=Aquesta tasca ja està validada
 error.especificar.document=s''ha d''especificar un document
 error.especificar.data=s''ha d''especificar la data
 error.extensio.document=L'extensió d''aquest document no està permesa
