ID:  644 MSG: En "consultas por tipo" poner por defecto el bot??n de "consultar" al pulsar "Intro"
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1106 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -41,6 +41,7 @@ expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
 expedient.consulta.massiva.accions.sel=Seleccionats
 expedient.consulta.massiva.accions.tots=Tots
+expedient.consulta.massiva.accions.totsTipus.consulta=Executar accions massives
 expedient.consulta.massiva.accions.totsTipus=Executar accions massives sobre el tipus d'expedient
 expedient.consulta.massiva.seleccio.activar=Activar selecció
 expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
@@ -274,7 +275,7 @@ expedient.massiva.proces.principal=Procés principal
 expedient.massiva.subprocessos=Subprocessos
 expedient.massiva.aturar=Aturar tramitaci&#243; d'expedients
 expedient.massiva.reassignar.buit=L'expedient no té cap tasca que coincideixi amb la tasca a reassignat
-expedient.massiva.reassignar.no.open=L&#39;expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, però només n&#39;hi havia {1} de actives que s&#39;han pogut reassignar 
+expedient.massiva.reassignar.no.open=L&\#39;expedient disposa de {0} tasques que coincideixen amb la rasca a reassignar, per\u00F2 nom\u00E9s n&\#39;hi havia {1} de actives que s&\#39;han pogut reassignar 
 expedient.massiva.tasca=Executar tasca
 expedient.massiva.tasca.guardar=Guardar.
 expedient.massiva.tasca.validar=Validar.
@@ -312,7 +313,7 @@ expedient.monitor.hilo=Nombre
 expedient.monitor.cputime=Tiempo CPU
 expedient.monitor.estado=Estado
 expedient.monitor.espera=Espera
-expedient.monitor.blockedtime=T. bloqueo							
+expedient.monitor.blockedtime=T. bloqueo\t\t\t\t\t\t\t
 expedient.monitor.os-name=Sistema operativo
 expedient.monitor.os-arch=Arquitectura
 expedient.monitor.os-version=Versi&oacute;n
