MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1111 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -200,6 +200,7 @@ error.validacio.tasca=Error de validació en la tasca
 error.especificar.dest.delegacio=No ha especificat cap destinatari per a la delegació
 
 error.tasca.no.disponible=Aquesta tasca ja no està disponible
+error.tasca.validada=Aquesta tasca ja està validada
 error.especificar.document=s''ha d''especificar un document
 error.especificar.data=s''ha d''especificar la data
 error.extensio.document=L'extensió d''aquest document no està permesa
@@ -288,6 +289,7 @@ error.no.tiexep.selec=No hi ha cap tipus d''expedient seleccionat
 error.no.exp.selec=No ha seleccionat cap expedient
 error.no.exp.selec.noDocAnnexat=Els expedients seleccionats no tenen cap document annexat per modificar
 error.no.tasc.selec=No ha seleccionat cap tasca
+error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massivament
 
 error.reindexar.expedient=Error al reindexar expedient
 
