--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -39,6 +39,10 @@ expedient.consulta.anulacio.motiu=Introdueixi el motiu de l'anul·lació
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
+expedient.consulta.massiva.accions.sel=Seleccionats
+expedient.consulta.massiva.accions.tots=Tots
+expedient.consulta.massiva.accions.totsTipus.consulta=Executar accions massives
+expedient.consulta.massiva.accions.totsTipus=Executar accions massives sobre el tipus d'expedient
 expedient.consulta.massiva.seleccio.activar=Activar selecció
 expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
 expedient.consulta.anulats=Mostrar anul·lats
@@ -379,6 +383,7 @@ etiqueta.exp.tipus=Tipus d'expedient
 etiqueta.exp.estat=Estat de l'expedient
 info.camp.consulta.afegit=S'ha afegit el camp a la consulta
 info.camp.consulta.esborrat=El camp de la consulta s'ha esborrat correctamentinfo.param.consulta.afegit=S'ha afegit el paràmetre a la consulta
+info.param.consulta.afegit=S'ha afegit el paràmetre a la consulta
 info.param.consulta.esborrat=El paràmetre de la consulta s'ha esborrat correctament
 
 info.consulta.guardat=La consulta s'ha guardat correctament
