--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -132,12 +132,11 @@ expedient.eines.motiu=Motiu
 expedient.eines.execucio_scripts=Execució d'scripts
 expedient.eines.reindexa_proces=Reindexar l'expedient
 expedient.eines.reindexar.expedients=Reindexar expedients
-expedient.eines.reassignar.expedients=Reassignar tasques
+expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.eines.modificar_variables=Variables
-expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.reassignar.tipus=Tipus d''expressió
 expedient.eines.reassignar_tasques=Tasca
 expedient.info.informacio=Informació de l'expedient
@@ -655,7 +654,6 @@ comuns.tots.tipus=Tots els tipus
 comuns.expedients=Expedients
 comuns.informes=Informes
 comuns.activitat=Activitat
-comuns.arxiu=Arxiu
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
@@ -1210,6 +1208,7 @@ perfil.info.home=Home
 perfil.info.dona=Dona
 perfil.info.canviar=Canviar contrasenya
 perfil.info.modificar=Modificar perfil
+perfil.info.preferencies=Preferències 
 
 permisos.entorn.perm_entorn=Permisos per l'entorn
 permisos.entorn.confirmacio=Estau segur que voleu esborrar aquests permisos?
@@ -1399,7 +1398,6 @@ tasca.signa.son_sign_oblig=són de signatura obligatòria
 tasca.signa.camp.cert=Certificat per a signar
 tasca.signa.camp.passwd=Contrasenya del certificat
 tasca.signa.obtenint.certs=Obtenint certificats disponibles...
-tasca.signa.signar=Signar
 tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
 tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
 tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
