MID: 652. MSG: Error al consultar documentos en la pestaña de documentos de la pantalla de tipus d'expedient MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1132 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -30,6 +30,7 @@ error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a cont
 error.camp.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
 error.camp.enumdomcons.tots=Només s''ha d''especificar un domini, una enumeració o una consulta
 error.camp.domini=Seleccioni un o altre
+error.camp.dada.valida=La fecha introducida no es una válida
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 
