--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -3,6 +3,7 @@ salutacio=Bon dia
 expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
+expedient.consulta.numero_llarg=N\u00FAmero d&#39;expedient
 expedient.consulta.datainici=Data d&#39;inici
 expedient.consulta.datahorainici=Data i hora d&#39;inici
 expedient.consulta.i=i
