MID: 690. MSG: Registro de subprocesos
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1253 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -178,6 +178,7 @@ expedient.registre.valorNou=Valor nou
 expedient.tasques=Registre de tasques
 expedient.log=Registre d'accions
 expedient.log.accio=Acció
+expedient.log.accio.PROCES_LLAMAR_SUBPROCES=Accés al subprocés
 expedient.log.accio.PROCES_VARIABLE_CREAR=Crear variable al procés
 expedient.log.accio.PROCES_VARIABLE_MODIFICAR=Modificar variable del procés
 expedient.log.accio.PROCES_VARIABLE_ESBORRAR=Esborrar variable del procés
@@ -215,6 +216,7 @@ expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
 expedient.log.objecte.EXPEDIENT=Expedient
 expedient.log.info=Informació
+expedient.log.info.nom=Nom
 expedient.log.info.variable=Variable
 expedient.log.info.document=Document
 expedient.log.info.accio=Acció
