MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1254 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -3,7 +3,7 @@ salutacio=Bon dia
 expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
-expedient.consulta.numero_llarg=N\u00FAmero d&#39;expedient
+expedient.consulta.numero_llarg=N\u00FAmero d&\#39;expedient
 expedient.consulta.datainici=Data d&#39;inici
 expedient.consulta.datahorainici=Data i hora d&#39;inici
 expedient.consulta.i=i
@@ -179,6 +179,7 @@ expedient.registre.valorNou=Valor nou
 expedient.tasques=Registre de tasques
 expedient.log=Registre d'accions
 expedient.log.accio=Acció
+expedient.log.accio.PROCES_LLAMAR_SUBPROCES=Accés al subprocés
 expedient.log.accio.PROCES_VARIABLE_CREAR=Crear variable al procés
 expedient.log.accio.PROCES_VARIABLE_MODIFICAR=Modificar variable del procés
 expedient.log.accio.PROCES_VARIABLE_ESBORRAR=Esborrar variable del procés
@@ -216,6 +217,7 @@ expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
 expedient.log.objecte.EXPEDIENT=Expedient
 expedient.log.info=Informació
+expedient.log.info.nom=Nom
 expedient.log.info.variable=Variable
 expedient.log.info.document=Document
 expedient.log.info.accio=Acció
