MID: 696. MSG: Añadir botón seleccionar todo en tramitación masiva de tareas MID: 695. MSG: Error importación-exportación terminis
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1262 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1317,6 +1317,7 @@ tasca.form.form_tasca=Formulari de la tasca
 tasca.form.guardar=Guardar
 tasca.form.validar=Validar
 tasca.form.obrir_form=Obrir formulari extern
+tasca.form.cancelar=Estau segur que voleu cancel·lar l'inici de la tasca?
 
 tasca.gllistat.tasq_pendents=Tasques pendents
 tasca.gllistat.confirmacio=Estau segur que voleu fer-vos càrrec d'aquesta tasca?
