MID: 711 MSG: Error al afegir o eliminar permisos en els tipus d'expedients per part d'usuaris sense rol d'administrador.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1308 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -187,10 +187,14 @@ error.exist.usuaris.rol=Hi ha usuaris que empren aquest rol
 error.esborrar.rols.admin.usuari=El rol d''administrador i el rol d''usuari no es poden esborrar
 
 error.afegir.permisos.entorn=No s''han pogut afegir els permisos a l'entorn
+error.afegir.permisos.entorn.permis=No està autoritzat a afegir permisos a l''entorn
 error.esborrar.permisos.entorn=No s''han pogut esborrar els permisos
+error.esborrar.permisos.entorn.permis=No té permis per a esborrar els permisos a l''entorn
 
 error.afegir.permisos.tipusexp=No s''han pogut afegir els permisos al tipus d''expedient
+error.afegir.permisos.tipusexp.permis=No té permis per a afegir els permisos
 error.esborrar.permisos.tipusexp=No s''han pogut esborrar els permisos
+error.esborrar.permisos.tipusexp.permis=No té permis per a esborrar els permisos
 
 error.validar.signatura=Error en la validació de la signatura
 error.rebre.signatura=Error rebent la signatura del document
