MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1351 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -30,13 +30,14 @@ expedient.llistat.columna.iniciat=Iniciat el
 expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
-expedient.llistat.accio.obrir=Obrir
+expedient.llistat.accio.consultar=Consultar
 expedient.llistat.accio.aturar=Aturar
 expedient.llistat.accio.anular=Anul·lar
 expedient.llistat.accio.esborrar=Esborrar
 expedient.llistat.accio.massiva=Tramitació massiva
 expedient.llistat.accio.seleccio.tots=Seleccionar tots els expedients
 expedient.llistat.accio.seleccio.netejar=Netejar selecció
+expedient.llistat.accio.nou=Nou expedient
 expedient.llistat.confirmacio.anular=Estau segur que voleu anular aquest expedient?
 expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
@@ -60,6 +61,65 @@ expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.registre=Registre
+
+expedient.tasca.columna.tasca=Tasca
+expedient.tasca.columna.responsable=Responsable
+expedient.tasca.columna.datcre=Creada el
+expedient.tasca.columna.datlim=Data límit
+expedient.tasca.columna.datfi=Finalitzada el
+expedient.tasca.accio.tramitar=Tramitar
+expedient.tasca.accio.delegar=Delegar
+expedient.tasca.accio.agafar=Agafar
+expedient.tasca.accio.reassignar=Reassignar
+expedient.tasca.accio.suspendre=Suspendre
+expedient.tasca.accio.reprendre=Reprendre
+expedient.tasca.accio.cancelar=Cancelar
+expedient.tasca.accio.alliberar=Alliberar
+expedient.tasca.grup.finalitzades=Tasques finalitzades
+expedient.tasca.confirmacio.suspendre=Estau segur que voleu suspendre aquesta tasca?
+expedient.tasca.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
+expedient.tasca.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.tasca.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
+expedient.tasca.nohiha=No hi ha tasques per a mostrar
+
+tasca.llistat.titol=Consulta de tasques
+tasca.llistat.filtre.camp.titol=Tasca
+tasca.llistat.filtre.camp.expedient=Expedient
+tasca.llistat.filtre.camp.prioritat=Prioritat
+tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
+tasca.llistat.filtre.camp.titol=Tasca
+tasca.llistat.filtre.camp.datcre=Data creació
+tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
+tasca.llistat.filtre.camp.datcre.fin=Data creació final
+tasca.llistat.filtre.camp.datlim=Data límit
+tasca.llistat.filtre.camp.datlim.ini=Data límit inicial
+tasca.llistat.filtre.camp.datlim.fin=Data límit final
+tasca.llistat.filtre.camp.mostrar.usuari=Mostrar tasques d'usuari
+tasca.llistat.filtre.camp.mostrar.grup=Mostrar tasques de grup
+tasca.llistat.columna.titol=Tasca
+tasca.llistat.columna.expedient=Expedient
+tasca.llistat.columna.tipexp=Tipus d'expedient
+tasca.llistat.columna.creada=Creada el
+tasca.llistat.columna.limit=Data límit
+tasca.llistat.columna.prioritat=Prioritat
+tasca.llistat.accio.tramitar=Tramitar
+tasca.llistat.accio.delegar=Delegar
+tasca.llistat.accio.agafar=Agafar
+tasca.llistat.accio.reassignar=Reassignar
+tasca.llistat.accio.suspendre=Suspendre
+tasca.llistat.accio.reprendre=Reprendre
+tasca.llistat.accio.cancelar=Cancelar
+tasca.llistat.accio.alliberar=Alliberar
+tasca.llistat.confirmacio.suspendre=Estau segur que voleu suspendre aquesta tasca?
+tasca.llistat.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasca?
+tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
+tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
+
+enum.tasca.etiqueta.CA=Cancel·lada
+enum.tasca.etiqueta.SU=Suspesa
+enum.tasca.etiqueta.PD=Pendent
+enum.tasca.etiqueta.FI=Finalitzada
+enum.tasca.etiqueta.AG=Agafada
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
