--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -146,7 +146,9 @@ error.modificar.dades.exp=No s''han pogut modificar les dades de l'expedient
 
 error.executar.script=No s''ha pogut executar L''script
 error.modificar.variable=No s''ha pogut modificar la variable
+error.expedient.ja.anulat=Aquest expedient ja està anulat
 error.aturar.expedient=No s''ha pogut aturar l'expedient
+error.cancelar.expedient=No s''ha pogut cancel·lar l'expedient
 error.expedient.ja.aturat=Aquest expedient ja està aturat
 error.expedient.ja.aturat.exp=L'expedient
 error.expedient.ja.aturat.estat=ja està aturat
