MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1357 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -63,6 +63,8 @@ expedient.dada.dades_proces=Dades del procés
 expedient.dada.afegir_dada_proces=Afegir nova dada al procés
 expedient.dada.dades_tasques=Dades de les tasques
 expedient.dada.afegir_dada_tasca=Afegir nova dada a la tasca
+expedient.dada.expedient.cap=Aquest expedient no conté cap dada
+expedient.dada.proces.cap=Aquest procés no conté cap dada
 expedient.document.adjuntar=Adjuntar nou document
 expedient.document.modificar_adjunt=Modificar document adjunt
 expedient.document.titol=Títol
