MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1359 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -52,10 +52,11 @@ expedient.info.camp.estat=Estat
 expedient.info.camp.defproc=Definició de procés
 expedient.info.participants=Persones participants
 expedient.info.relacionats=Expedients relacionats
-expedient.info.accio.modificar=Modificar informació
-expedient.info.accio.relacionar=Relacionar
-expedient.info.accio.aturar=Aturar tramitació
-expedient.info.accio.script=Executar script
+expedient.info.accio.modificar=Modificar informació...
+expedient.info.accio.relacionar=Afegir relació...
+expedient.info.accio.aturar=Aturar...
+expedient.info.accio.anular=Anul·lar...
+expedient.info.accio.script=Executar script...
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
@@ -81,6 +82,21 @@ expedient.tasca.confirmacio.reprendre=Estau segur que voleu reprendre aquesta ta
 expedient.tasca.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 expedient.tasca.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
+
+expedient.accio.aturar.titol=Aturar expedient
+expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
+expedient.accio.aturar.camp.motiu=Motiu
+expedient.accio.aturar.boto.aturar=Aturar
+expedient.accio.anular.titol=Anul·lar expedient
+expedient.accio.anular.confirmacio=Estau segur que voleu anul·lar aquest expedient?
+expedient.accio.anular.camp.motiu=Motiu
+expedient.accio.anular.boto.anular=Anul·lar
+expedient.accio.script.titol=Executar script
+expedient.accio.script.confirmacio=Estau segur que voleu executar aquest script?
+expedient.accio.script.camp.script=Script
+expedient.accio.script.boto.executar=Executar
+expedient.accio.modificar.titol=Modificar informació de l'expedient
+expedient.accio.modificar.boto.modificar=Modificar
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Tasca
@@ -126,3 +142,4 @@ comu.estat.finalitzat=Finalitzat
 comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
 comu.boto.accions=Accions
+comu.boto.cancelar=Cancel·lar
