MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1360 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -143,3 +143,9 @@ comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
 comu.boto.accions=Accions
 comu.boto.cancelar=Cancel·lar
+
+perfil.usuari.expedients=Expedients
+perfil.usuari.tasques=Tasques
+perfil.usuari.informes=Informes
+perfil.usuari.completa=Completa
+perfil.usuari.reducida=Reduïda
