Selenium: 	- Implementadas pruebas para TEX.11 (Tramites) y TEX.12 (Forms). 	- Revisadas pruebas de Entorno y añadida la ENT.6 Reindexar expedientes
[messages.properties] Añadida traduccion que faltaba cuando se borraba un mapeo de sistra.
[ExpedientTipusSistraAdjuntsController.java] Corregido error 404 al que daba al intentar borrar un doc. adjunto.

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1364 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -555,6 +555,8 @@ info.reassignacio.cancelat=La reassignació s'ha cancel·lat correctament
 
 info.signatura.doc.processat=La signatura del document s'ha processat correctament
 
+info.mapeigSistra.esborrat=El mapeig s´ha esborrat correctament
+
 txt.m_alta=Molt alta
 txt.alta=Alta
 txt.normal=Normal
