MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1371 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -131,6 +131,11 @@ tasca.llistat.confirmacio.reprendre=Estau segur que voleu reprendre aquesta tasc
 tasca.llistat.confirmacio.cancelar=Estau segur que voleu cancel·lar aquesta tasca? Aquesta acció no es pot tornar enrera una vegada executada.
 tasca.llistat.confirmacio.alliberar=Estau segur que voleu alliberar aquesta tasca?
 
+tasca.tramitacio.boto.guardar=Guardar
+tasca.tramitacio.boto.validar=Validar
+tasca.tramitacio.boto.restaurar=Restaurar
+tasca.tramitacio.boto.finalitzar=Finalitzar
+
 enum.tasca.etiqueta.CA=Cancel·lada
 enum.tasca.etiqueta.SU=Suspesa
 enum.tasca.etiqueta.PD=Pendent
