MID: 528. MSG: Merge de la branca 2.6 MID: 689. MSG: Falla el alta de expedientes desde una aplicación externa MID: 717. MSG: Error en tramitación masiva de tareas
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1382 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -41,6 +41,8 @@ expedient.llistat.accio.nou=Nou expedient
 expedient.llistat.confirmacio.anular=Estau segur que voleu anular aquest expedient?
 expedient.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
+expedient.informe.canviar=Canviar consulta
+
 expedient.info.titol=Informació de l'expedient
 expedient.info.informacio=Informació
 expedient.info.camp.numero=Número
@@ -148,6 +150,7 @@ comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
 comu.boto.accions=Accions
 comu.boto.cancelar=Cancel·lar
+comu.boto.generar=Generar
 
 perfil.usuari.expedients=Expedients
 perfil.usuari.tasques=Tasques
