MID: 689. MSG: Falla el alta de expedientes desde una aplicación externa MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1385 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -157,3 +157,7 @@ perfil.usuari.tasques=Tasques
 perfil.usuari.informes=Informes
 perfil.usuari.completa=Completa
 perfil.usuari.reducida=Reduïda
+
+termini.data_ini=Data inici
+termini.data_fi=Data fi
+termini.durada=Durada
