MID: 688. MSG: Informar de la data de versió en la consulta de definicions de procés en el disseny de Tipus Expedient MID: 691. MSG: Reassignació de tasques en data actual MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1389 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -88,6 +88,7 @@ expedient.document.pendent.psigna.error=Error en la comunicació amb el portasign
 expedient.document.info.sensedocuments=No hi ha documents per modificar
 expedient.document.info.senseaccions=No hi ha accions per executar
 expedient.editar.informacio=Modificar informació de l'expedient
+expedient.editar.confirmacio.finalitzar=Estau segur que voleu finalitzar aquest expedient?
 expedient.editar.iniciador=Iniciador
 expedient.editar.entrada_num=Entrada núm.
 expedient.editar.responsable=Responsable
